--- a/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/en_us.json
+++ b/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/en_us.json
@@ -1,3 +1,6 @@
 {
 	"block.biomesoplenty.barley": "Wild Barley"
+	
+	"biome.biomesoplenty.end_reed": "End Reed"
+	"biome.biomesoplenty.end_wilds": "End Wilds"
 }
