--- a/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/en_us.json
+++ b/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"block.biomesoplenty.barley": "Wild Barley"
+	"item.biomesoplenty.barley": "Wild Barley"
 	
 	"biome.biomesoplenty.end_reed": "End Reeds"
 	"biome.biomesoplenty.end_wilds": "End Wilds"
