--- a/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/de_de.json
+++ b/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/de_de.json
@@ -1,5 +1,6 @@
 {
 	"block.biomesoplenty.barley": "Wilde Gerste"
+	"item.biomesoplenty.barley": "Wilde Gerste"
 	
 	"biome.biomesoplenty.end_reed": "End Schilf"
 	"biome.biomesoplenty.end_wilds": "End Wildnis"
