--- a/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/de_de.json
+++ b/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/de_de.json
@@ -1,7 +1,7 @@
 {
-	"block.biomesoplenty.barley": "Wilde Gerste"
-	"item.biomesoplenty.barley": "Wilde Gerste"
+	"block.biomesoplenty.barley": "Wilde Gerste",
+	"item.biomesoplenty.barley": "Wilde Gerste",
 	
-	"biome.biomesoplenty.end_reed": "End Schilf"
+	"biome.biomesoplenty.end_reed": "End Schilf",
 	"biome.biomesoplenty.end_wilds": "End Wildnis"
 }
