--- a/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/en_us.json
+++ b/config/openloader/resources/Cookies_Edits/assets/biomesoplenty/lang/en_us.json
@@ -1,7 +1,7 @@
 {
-	"block.biomesoplenty.barley": "Wild Barley"
-	"item.biomesoplenty.barley": "Wild Barley"
+	"block.biomesoplenty.barley": "Wild Barley",
+	"item.biomesoplenty.barley": "Wild Barley",
 	
-	"biome.biomesoplenty.end_reed": "End Reeds"
+	"biome.biomesoplenty.end_reed": "End Reeds",
 	"biome.biomesoplenty.end_wilds": "End Wilds"
 }
