--- a/kubejs/assets/tetra/lang/en_us.json
+++ b/kubejs/assets/tetra/lang/en_us.json
@@ -1,5 +1,11 @@
 {
 
+	"tetra.material.cobalt": "Cobalt",
+	"tetra.material.cobalt.prefix": "Cobalt",
+
+	"tetra.material.manyullyn": "Manyullym",
+	"tetra.material.manyullyn.prefix": "Manyullym",
+
 	"coment":"From SmallTertaAdittions",
 
 	"tetra.material.enderium": "Enderium",
