--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -2,5 +2,5 @@
 	"curios.identifier.tank": "Create Tank",
 
 	"curios.identifier.mod_curio": "Curio*",
-	"curios.modifiers.mod_curio": "When in Curio* Slot:"
+	"curios.modifiers.mod_curio": "When in Curio*:"
 }
